<resources>
    <string name="app_name">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="hint_error_password">Password cannot be less than 8</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup_to_get_started">Signup to get started</string>
    <string name="supplier">Supplier</string>
    <string name="home">Home</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_alert_dialog_information">Are you sure?</string>
    <string name="sub_title_alert_dialog_information">Click OK if you are sure you want to delete data %s.</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_stock">Enter Stock</string>
    <string name="enter_price">Enter Price</string>
    <string name="create">Create</string>
    <string name="choose_supplier">Choose Supplier</string>
    <string name="item">Item</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="logout">Logout</string>
    <string name="make_sure_logout">"Are you sure you want to exit the application?"</string>
    <string name="payment">Payment</string>
    <string name="transaction">Transaction</string>
    <string name="buyer">Buyer</string>
    <string name="gender">Gender</string>
    <string name="retry">Retry</string>
    <string name="coming_soon_payment">Feature payment is coming soon</string>
    <string name="coming_soon_transaction">Feature transaction is coming soon</string>
    <string name="enter_gender">Enter Gender</string>
</resources>